--- a/src/scss/modules/_index.scss
+++ b/src/scss/modules/_index.scss
@@ -1,3 +1,6 @@
+* {
+	overflow-x: hidden;
+}
 .wrapper {
 	border-right: 5px solid $color-secondary-accent;
 	border-left: 5px solid $color-secondary-accent;
